--- a/public/register.html
+++ b/public/register.html
@@ -42,7 +42,7 @@
 
    <div class="ui fixed inverted menu">
             <div class="ui container">
-                 <div class="header item"><a href="/"><i class="certificate icon"></i>Expiry</a></div>
+                 <div class="header item"><a href="/"><i class="certificate icon"></i>Raahat</a></div>
                </div>
                </div>
               
