--- a/public/sellform.html
+++ b/public/sellform.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>App</title>
+  <title>Raahat</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link rel="stylesheet" type="text/css" href="/css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.css" >
@@ -42,7 +42,7 @@
 
    <div class="ui fixed inverted menu">
             <div class="ui container">
-                 <div class="header item"><a href="/"><i class="certificate icon"></i>Expiry</a></div>
+                 <div class="header item"><a href="/"><i class="certificate icon"></i>Raahat</a></div>
                </div>
                </div>
               
